# mmngr_lib

./: README
libmmngr/mmngr/: AUTHORS  ChangeLog  NEWS  README  configure.ac
libmmngr/mmngr/if/: Makefile.am  mmngr_if.c
libmmngr/mmngr/include/: mmngr_user_private.h  mmngr_user_public.h
libmmngr/mmngr/tp/: Makefile.am  main.c
libmmngr/mmngrbuf/: ChangeLog  Makefile.am  NEWS  README  configure.ac
libmmngr/mmngrbuf/if/: Makefile.am  mmngr_buf_if.c
libmmngr/mmngrbuf/include/: mmngr_buf_user_private.h  mmngr_buf_user_public.h
libmmngr/mmngrbuf/tp/: Makefile.am  main.c
